Alert fix button align

--- a/wp-content/themes/neomuscle/assets/sass/components/_media.scss
+++ b/wp-content/themes/neomuscle/assets/sass/components/_media.scss
@@ -454,7 +454,6 @@
     padding: 5px 20px;
     text-align: left;
     .button {
-      min-width: 22%;
       border-top: none;
       border-left: 1px solid #e7c400;
       margin-top: 0;
